Changed name of the post and delete endpoints to add/remove a game to/from a user. Both now use path parameters.
