# index.js
@@ -83,10 +83,10 @@ router.get("/user", authenticateJWT, (req, res, next) => {
     }).catch(next);
 });
 
-router.post("/users/game", authenticateJWT, (req, res, next) => {
+router.post("/users/games/:id", authenticateJWT, (req, res, next) => {
     let body = req.body;
     let user_id = req.user_id;
-    let game_id = body.game_id;
+    let game_id = req.params.game_id;
     let hours_played = body.hours_played;
     let rank = body.rank;
     userGamesController.connectGameToUser(user_id, game_id, hours_played, rank)
@@ -94,7 +94,7 @@ router.post("/users/game", authenticateJWT, (req, res, next) => {
         .catch(next);
 });
 
-router.delete("/users/:game_id", authenticateJWT, (req, res, next) => {
+router.delete("/users/games/:id", authenticateJWT, (req, res, next) => {
     let userId = req.user_id;
     let gameId = req.params.game_id;
     userGamesController.removeGameFromUser(userId, gameId)
